# matrix-matrix-bridge

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml
matrixmatrixbridge/: __init__.py  handlers.py
tests/: test_config.py
