[tool.poetry]
name = "matrix-matrix-bridge"
version = "0.1.0"
description = "A bridge for the Matrix Protocol that connects Matrix rooms to each other."
authors = ["krazykirby99999"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
simplematrixbotlib = "^2.6.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
